<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InterstitialAdActivity">

    <TextView
        android:id="@+id/text_interstitial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/interstitial_title_text"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/ad_display_form"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ad_display_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_interstitial"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="30dp"
        android:text="@string/display_form"
        android:textColor="#000000"
        android:textSize="@dimen/hiad_text_16_sp"
        app:layout_constraintBottom_toTopOf="@+id/display_radio_group"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/display_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_interstitial"
        android:layout_marginBottom="50dp"
        android:layout_toRightOf="@+id/ad_display_form"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/load_ad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/display_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:checked="true"

            android:text="@string/interstitial_display_picture" />

        <RadioButton
            android:id="@+id/display_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"

            android:text="@string/interstitial_display_video" />

    </RadioGroup>

    <Button
        android:id="@+id/load_ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ad_display_form"
        android:layout_centerHorizontal="true"
        android:text="@string/load_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>